Update base template and logo image path

--- a/overrides/base.html
+++ b/overrides/base.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "readthedocs/base.html" %}
 
 {% block site_name %}
 <div style="display: flex; align-items: center;">
-    <img src="{{ base_url }}/images/FRICOSIPY_logo.png" alt="Logo" style="height: 28px; margin-right: 8px;">
+    <img src="{{ base_url }}/docs/images/FRICOSIPY_logo.png" alt="FRICOSIPY Logo" style="height: 28px; margin-right: 8px;">
     <span style="font-weight: bold;">{{ config.site_name }}</span>
 </div>
 {% endblock %}
